# ai-platform

./: README.md
backend/: .env  database.py  package-lock.json  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  health.py  prompts.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: ai_model.py  message.py  prompt.py  prompt_method.py  session.py  user.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx  styles.css
frontend/src/components/: ChatWindow.jsx  InputBox.jsx  MessageBubble.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/utils/: mockApi.js
